k8s/keys/keys.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keys

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keys
  namespace: keys
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keys
  template:
    metadata:
      labels:
        app: keys
    spec:
      containers:
      - name: keys
        image: rssnyder/keys:test
        imagePullPolicy: IfNotPresent
        ports:
        - name: api
          containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: keys
  namespace: keys
spec:
  type: LoadBalancer
  selector:
    app: keys
  ports:
  - name: web
    port: 80
    targetPort: api

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keys
  namespace: keys
spec:
  ingressClassName: nginx
  rules:
    - host: keys.rileysnyder.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  keys
                port:
                  number: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keys-k8s
  namespace: keys
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keys-k8s
  template:
    metadata:
      labels:
        app: keys-k8s
    spec:
      containers:
      - name: keys
        image: rssnyder/keys:test
        imagePullPolicy: IfNotPresent
        ports:
        - name: api
          containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: keys-k8s
  namespace: keys
spec:
  type: LoadBalancer
  selector:
    app: keys-k8s
  ports:
  - name: web
    port: 80
    targetPort: api

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keys-k8s
  namespace: keys
spec:
  ingressClassName: nginx
  rules:
    - host: keys.k8s.rileysnyder.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  keys-k8s
                port:
                  number: 80
